@@ -5,10 +5,12 @@ context = categories
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =				\
+	applications-accessories.png	\
 	applications-development.png	\
 	applications-games.png	\
 	applications-graphics.png	\
 	applications-internet.png	\
+	applications-multimedia.png	\
 	preferences-desktop.png	\
 	preferences-system.png	
 
