@@ -1,3 +1,9 @@
+2006-07-17  Jakub Steiner <jimmac@ximian.com>
+
+	* applications-accessories*:
+	* applications-multimedia*:
+	* preferences-system*: only bitmaps for now
+
 2006-07-14  Jakub Steiner <jimmac@ximian.com>
 
 	* 32x32/animations/*: spinner at 32x32
